--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <div class="presentation-container">
         <!-- Title Slide -->
         <div class="slide active title-slide">
-            <div class="leo-badge">LEO</div>
+            <div class="leo-badge">ALPHA LEO CLUB OF MZIZIMA</div>
             <h1 class="slide-title">Annual Plan 2025-2026</h1>
             <p class="slide-subtitle">Alternating Monthly Activities</p>
             <p style="font-size: 1.1em; margin-top: 30px;">Lionistic Year Strategic Planning</p>
