--- a/index.html
+++ b/index.html
@@ -65,18 +65,21 @@
         }
 
         .leo-badge {
-            width: 80px;
-            height: 80px;
+            width: 250px;
+            height: 250px;
             background: linear-gradient(135deg, #f39c12, #e67e22);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 1.5em;
+            font-size: 1.6em;
             color: white;
             margin: 0 auto 20px;
             font-weight: bold;
-            box-shadow: 0 10px 20px rgba(243, 156, 18, 0.3);
+            box-shadow: 0 15px 30px rgba(243, 156, 18, 0.4);
+            text-align: center;
+            line-height: 1.3;
+            padding: 15px;
         }
 
         .title-slide {
