--- a/index.html
+++ b/index.html
@@ -223,32 +223,42 @@
 
         .navigation {
             position: absolute;
-            bottom: 5px;
+            bottom: 8px;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
-            gap: 12px;
+            gap: 8px;
             align-items: center;
             background: rgba(255,255,255,0.95);
-            padding: 6px 12px;
-            border-radius: 20px;
+            padding: 8px 12px;
+            border-radius: 25px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            width: calc(100% - 20px);
+            max-width: 350px;
+            justify-content: center;
         }
 
         .nav-btn {
             background: #3498db;
             color: white;
             border: none;
-            padding: 10px 20px;
-            border-radius: 25px;
+            padding: 10px 16px;
+            border-radius: 20px;
             cursor: pointer;
             font-weight: 600;
             transition: all 0.3s ease;
+            font-size: 0.9em;
+            touch-action: manipulation;
+            min-width: 70px;
         }
 
         .nav-btn:hover {
             background: #2980b9;
-            transform: scale(1.05);
+            transform: scale(1.02);
+        }
+
+        .nav-btn:active {
+            transform: scale(0.98);
         }
 
         .nav-btn:disabled {
@@ -260,10 +270,11 @@
         .slide-counter {
             background: #34495e;
             color: white;
-            padding: 8px 15px;
-            border-radius: 20px;
-            font-size: 0.9em;
+            padding: 8px 12px;
+            border-radius: 15px;
+            font-size: 0.85em;
             font-weight: 600;
+            white-space: nowrap;
         }
 
         .overview-stats {
@@ -831,6 +842,7 @@
     </script>
 </body>
 </html>
+
 
 
 
